Fix Slider resize handlers not visible when grouped

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -4163,6 +4163,9 @@ a.upfront-region-name-edit-trigger:before {
 .upfront-module-group .upfront-editable_entities_container .ui-resizable-handle {
   visibility: hidden; }
 
+.upfront-module-group .upfront-editable_entities_container .uslider .ui-resizable-handle {
+  visibility: visible; }
+
 .upfront-module-group-on-edit > .ui-resizable-handle, .upfront-module-group-on-edit > .upfront-entity_meta > .upfront-icon-button {
   visibility: hidden !important; }
 
